[project]
name = "Flask-Security"
description = "Quickly add security features to your Flask application."
readme.content-type = "text/x-rst"
readme.file = "README.rst"
keywords = ["flask security"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Chris Wagner", email = "jwag.wagner+github@gmail.com"}]
authors = [{ name = "Matt Wright"}, { name = "Chris Wagner", email = "jwag.wagner+github@gmail.com"}]
requires-python = ">=3.10"
urls.Documentation = "https://flask-security.readthedocs.io"
urls.Homepage = "https://github.com/pallets-eco/flask-security"
urls.Source = "https://github.com/pallets-eco/flask-security"
urls.Tracker = "https://github.com/pallets-eco/flask-security/issues"
urls.Releases = "https://pypi.org/project/Flask-Security/"
classifiers=[
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
]
dynamic = [
  "version",
]
dependencies = [
    # flask dependencies include werkzeug, jinja2, itsdangerous, click, blinker
    "Flask>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-Principal>=0.4.0",
    "Flask-WTF>=1.1.2",
    "email-validator>=2.3.0",
    "markupsafe>=2.1.0",
    "libpass>=1.9.3",
    "wtforms>=3.0.0",  # for form-level errors
]

[project.optional-dependencies]
babel = ["babel>=2.17.0", "flask_babel>=4.0.0"]
fsqla = ["flask_sqlalchemy>=3.1.1", "sqlalchemy>=2.0.41"]
common = ["argon2_cffi>=25.1.0", "bcrypt>=4.2.1", "flask_mail>=0.10.0", "bleach>=6.0.0"]
mfa = ["cryptography>=45.0.7", "qrcode>=7.4.2", "phonenumberslite>=8.13.11", "webauthn>=2.6.0"]

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_security"

[tool.flit.sdist]
include = [
    "AUTHORS",
    "CHANGES.rst",
    "CONTRIBUTING.rst",
    "LICENSE.txt",
    ".djlintrc",
    ".git-blame-ignore-revs",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "pyproject-too.toml",
    "babel.ini",
    "codecov.yml",
    "mypy.ini",
    "pytest.ini",
    "tox.ini",
    "docs/",
    "examples/",
    "requirements",
    "tests/",
]
exclude = ["docs/_build/"]

[tool.djlint]
    ignore="H005,H006"  # lang, img height/width

[tool.pyright]
    include=["flask_security", "tests/view_scaffold.py"]
    analyzeUnannotatedFunctions = "none"
    reportMissingImports = false

[dependency-groups]
dev = [
    "check-wheel-contents>=0.6.3",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-principal>=0.4.0",
    "flask-wtf>=1.3.0",
    "flit>=3.12.0",
    "libpass>=1.9.3",
    "markupsafe>=3.0.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
    "tox>=4.54.0",
    "types-requests>=2.33.0.20260518",
]
docs = [
    "flask-sqlalchemy>=3.1.1",
    "packaging>=26.2",
    "pallets-sphinx-themes>=2.5.0",
    "sphinx>=8.1.3",
    "sphinx-issues>=6.0.0",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
]
tests = [
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "babel>=2.18.0",
    "bcrypt>=5.0.0",
    "bleach>=6.3.0",
    "cbor2<6.0.0",
    "coverage>=7.14.0",
    "cryptography>=48.0.0",
    "djlint>=1.36.4",
    "flask-babel>=4.0.0",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-sqlalchemy-lite>=0.2.1",
    "freezegun>=1.5.5",
    "mongoengine>=0.29.3",
    "mongomock>=4.3.0",
    "msgcheck>=4.2.0",
    "peewee>=4.0.5",
    "phonenumberslite>=9.0.30",
    "pony>=0.7.19",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.3",
    "pytest-cache>=1.0",
    "pytest-cov>=7.1.0",
    "qrcode>=8.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "webauthn>=2.7.1",
    "zxcvbn>=4.5.0",
]
