[project]
name = "Flask-Security"
description = "Quickly add security features to your Flask application."
readme.content-type = "text/x-rst"
readme.file = "README.rst"
keywords = ["flask security"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Chris Wagner", email = "jwag.wagner+github@gmail.com"}]
authors = [{ name = "Matt Wright"}, { name = "Chris Wagner", email = "jwag.wagner+github@gmail.com"}]
requires-python = ">=3.10"
urls.Documentation = "https://flask-security.readthedocs.io"
urls.Homepage = "https://github.com/pallets-eco/flask-security"
urls.Source = "https://github.com/pallets-eco/flask-security"
urls.Tracker = "https://github.com/pallets-eco/flask-security/issues"
urls.Releases = "https://pypi.org/project/Flask-Security/"
classifiers=[
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
]
dynamic = [
  "version",
]
dependencies = [
    # flask dependencies include werkzeug, jinja2, itsdangerous, click, blinker
    "Flask>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-Principal>=0.4.0",
    "Flask-WTF>=1.1.2",
    "email-validator>=2.3.0",
    "markupsafe>=2.1.0",
    "libpass>=1.9.3",
    "wtforms>=3.0.0",  # for form-level errors
]

[project.optional-dependencies]
babel = ["babel>=2.17.0", "flask_babel>=4.0.0"]
fsqla = ["flask_sqlalchemy>=3.1.1", "sqlalchemy>=2.0.41"]
common = ["argon2_cffi>=25.1.0", "bcrypt>=4.2.1", "flask_mail>=0.10.0", "bleach>=6.0.0"]
mfa = ["cryptography>=45.0.7", "qrcode>=7.4.2", "phonenumberslite>=8.13.11", "webauthn>=2.6.0"]


[dependency-groups]
babel = [
    "babel",
    "jinja2",
]
dev = [
    "check-wheel-contents",
    "email-validator",
    "flask",
    "flask-login",
    "flask-principal",
    "flask-wtf",
    "flit",
    "libpass",
    "markupsafe",
    "mypy",
    "pre-commit",
    "psycopg2-binary",
    "pymysql",
    "tox",
    "tox-uv",
    "types-requests",
]
docs = [
    "flask-sqlalchemy",
    "packaging",
    "pallets-sphinx-themes",
    "sphinx",
    "sphinx-issues",
    "sqlalchemy",
    "sqlalchemy-utils",
]
gha-update = [
    "gha-update ; python_full_version >= '3.12'",
]
pre-commit = [
    "pre-commit",
]
tests = [
    "argon2-cffi",
    "authlib",
    "babel",
    "bcrypt",
    "bleach",
    "cbor2",
    "coverage",
    "cryptography",
    "djlint",
    "flask-babel",
    "flask-mail",
    "flask-sqlalchemy",
    "flask-sqlalchemy-lite",
    "freezegun",
    "mongoengine",
    "mongomock",
    "msgcheck",
    "peewee",
    "phonenumberslite",
    "pony",
    "pydocstyle",
    "pytest",
    "pytest-cache",
    "pytest-cov",
    "qrcode",
    "requests",
    "sqlalchemy",
    "sqlalchemy-utils",
    "webauthn",
    "zxcvbn",
]

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_security"

[tool.flit.sdist]
include = [
    "AUTHORS",
    "CHANGES.rst",
    "CONTRIBUTING.rst",
    "LICENSE.txt",
    ".djlintrc",
    ".git-blame-ignore-revs",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "pyproject-too.toml",
    "babel.ini",
    "codecov.yml",
    "mypy.ini",
    "pytest.ini",
    "tox.ini",
    "docs/",
    "examples/",
    "requirements",
    "tests/",
]
exclude = ["docs/_build/"]

[tool.djlint]
    ignore="H005,H006"  # lang, img height/width

[tool.pyright]
    include=["flask_security", "tests/view_scaffold.py"]
    analyzeUnannotatedFunctions = "none"
    reportMissingImports = false
