[project]
name = "Flask-Security"
description = "Quickly add security features to your Flask application."
readme.content-type = "text/x-rst"
readme.file = "README.rst"
keywords = ["flask security"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Chris Wagner", email = "jwag.wagner+github@gmail.com"}]
authors = [{ name = "Matt Wright"}, { name = "Chris Wagner", email = "jwag.wagner+github@gmail.com"}]
requires-python = ">=3.10"
urls.Documentation = "https://flask-security.readthedocs.io"
urls.Homepage = "https://github.com/pallets-eco/flask-security"
urls.Source = "https://github.com/pallets-eco/flask-security"
urls.Tracker = "https://github.com/pallets-eco/flask-security/issues"
urls.Releases = "https://pypi.org/project/Flask-Security/"
classifiers=[
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
]
dynamic = [
  "version",
]
dependencies = [
    # flask dependencies include werkzeug, jinja2, itsdangerous, click, blinker
    "Flask>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-Principal>=0.4.0",
    "Flask-WTF>=1.1.2",
    "email-validator>=2.3.0",
    "markupsafe>=2.1.0",
    "libpass>=1.9.3",
    "wtforms>=3.0.0",  # for form-level errors
]

[project.optional-dependencies]
babel = ["babel>=2.17.0", "flask_babel>=4.0.0"]
fsqla = ["flask_sqlalchemy>=3.1.1", "sqlalchemy>=2.0.41"]
common = ["argon2_cffi>=25.1.0", "bcrypt>=4.2.1", "flask_mail>=0.10.0", "bleach>=6.0.0"]
mfa = ["cryptography>=45.0.7", "qrcode>=7.4.2", "phonenumberslite>=8.13.11", "webauthn>=2.6.0"]

[dependency-groups]
babel = [
    "babel",
    "jinja2",
]
dev = [
    "check-wheel-contents",
    "email-validator",
    "flask",
    "flask-login",
    "flask-principal",
    "flask-wtf",
    "flit",
    "libpass",
    "markupsafe",
    "mypy",
    "pre-commit",
    "psycopg2-binary",
    "pymysql",
    "tox",
    "tox-uv",
    "types-requests",
]
docs = [
    "flask-sqlalchemy",
    "packaging",
    "pallets-sphinx-themes",
    "sphinx",
    "sphinx-issues",
    "sqlalchemy",
    "sqlalchemy-utils",
]
gha-update = [
    "gha-update ; python_full_version >= '3.12'",
]
pre-commit = [
    "pre-commit",
]
tests = [
    "argon2-cffi",
    "authlib",
    "babel",
    "bcrypt",
    "bleach",
    "cbor2",
    "coverage",
    "cryptography",
    "djlint",
    "flask-babel",
    "flask-mail",
    "flask-sqlalchemy",
    "flask-sqlalchemy-lite",
    "freezegun",
    "mongoengine",
    "mongomock",
    "msgcheck",
    "peewee",
    "phonenumberslite",
    "pony",
    "pydocstyle",
    "pytest",
    "pytest-cache",
    "pytest-cov",
    "qrcode",
    "requests",
    "sqlalchemy",
    "sqlalchemy-utils",
    "webauthn",
    "zxcvbn",
]
typing = [
    "mypy",
]

[build-system]
requires = ["flit-core>=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_security"

[tool.flit.sdist]
include = [
    "AUTHORS",
    "CHANGES.rst",
    "CONTRIBUTING.rst",
    "LICENSE.txt",
    ".djlintrc",
    ".git-blame-ignore-revs",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "pyproject-too.toml",
    "babel.ini",
    "codecov.yml",
    "mypy.ini",
    "pytest.ini",
    "tox.ini",
    "docs/",
    "examples/",
    "requirements",
    "tests/",
]
exclude = ["docs/_build/"]

[tool.djlint]
ignore="H005,H006"  # lang, img height/width

[tool.pyright]
include=["flask_security", "tests/view_scaffold.py"]
analyzeUnannotatedFunctions = "none"
reportMissingImports = false

[tool.tox]
env_list = [
    { product = [
        ["py310", "py311", "py312", "py313", "py314", "pypy311"],
        ["low", "release", "appinstall"]
    ] },
    "mypy",
    "async",
    "nowebauthn",
    "nobabel",
    "noauthlib",
    "style",
    "docs",
    "coverage",
    "makedist",
]

[tool.tox.env_run_base]
description = "pytest on latest dependency versions"
runner = "uv-venv-lock-runner"
package = "wheel"
wheel_build_env = ".pkg"
constrain_package_deps = true
use_frozen_constraints = true
dependency_groups = ["tests"]
env_tmp_dir = "{toxworkdir}/tmp/{envname}"
factors = [
    ["py310", "py311", "py312", "py313", "py314", "pypy311"],
    ["low", "release", "appinstall"],
]
commands = [
    { replace = "if", condition = "factor.low", then = [[
        "uv", "pip", "install",
        "pytest",
        "Flask==3.1.1",
        "Flask-SQLAlchemy==3.1.1",
        "Flask-SQLAlchemy-Lite==0.1.0",
        "Flask-Babel==4.0.0",
        "Flask-Mail==0.10.0",
        "Flask-Login==0.6.3",
        "Flask-WTF==1.1.2",
        "peewee==3.17.9",
        "argon2_cffi==21.3.0",
        "authlib==1.2.0",
        "babel==2.16.0",
        "bcrypt==4.0.1",
        "bleach==6.0.0",
        "freezegun",
        "jinja2==3.1.2",
        "itsdangerous==2.2.0",
        "markupsafe==2.1.2",
        "mongoengine==0.29.1",
        "mongomock==4.3.0",
        "pony==0.7.16;python_version<'3.11'",
        "phonenumberslite==8.13.11",
        "qrcode==7.4.2",
        # authlib requires requests
        "requests",
        "sqlalchemy==2.0.41",
        "sqlalchemy-utils==0.42.0",
        "webauthn==2.6.0",
        "werkzeug==3.1.3",
        "zxcvbn==4.4.28",
    ]], extend = true },
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    { replace = "if", condition = "factor.low or factor.release", then = [
        [
            "pytest", "-v", "--capture=tee-sys", "--tb=short", "--basetemp={env_tmp_dir}",
            {replace = "posargs", default = [], extend = true},
        ],
    ], "else" = [
        [
            "python", "-c", "from flask_security import Security; s = Security()",
        ],
    ], extend = true },
]

[tool.tox.env.async]
description = "run tests without authlib"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "install", "flask[async]",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.coverage]
description = "run with coverage"
dependency_groups = ["tests"]
commands = [
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    ["coverage", "run", "--source=flask_security", "-m", "pytest"],
    ["coverage", "xml"],
]

[tool.tox.env.docs]
description = "build docs"
dependency_groups = ["docs"]
commands = [["sphinx-build", "-E", "-W", "-b", "html", "docs", "docs/_build/"]]

[tool.tox.env.main]
description = "run tests against main"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "install",
        "git+https://github.com/pallets/werkzeug@main#egg=werkzeug",
        "git+https://github.com/pallets/flask@main#egg=flask",
        "git+https://github.com/pallets/flask-sqlalchemy@main#egg=flask-sqlalchemy",
        "git+https://github.com/pallets/jinja@main#egg=jinja2",
        "git+https://github.com/pallets-eco/flask-principal@main#egg=flask-principal",
        "git+https://github.com/wtforms/wtforms@main#egg=wtforms",
        "git+https://github.com/maxcountryman/flask-login@main#egg=flask-login",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.mypy]
description = "run type checks"
dependency_groups = ["typing"]
commands = [
    ["mypy", "--install-types", "--non-interactive", "flask_security", "tests"],
]

[tool.tox.env.noauthlib]
description = "run tests without authlib"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "uninstall", "-y", "authlib",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.nobabel]
description = "run tests without babel"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "uninstall", "-y", "babel", "flask_babel",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.noflasksqlalchemy]
description = "run tests without flask-sqlalchemy"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "uninstall", "-y", "flask_sqlalchemy", "flask_sqlalchemy_lite",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.nowebauthn]
description = "run tests without flask-sqlalchemy"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "uninstall", "-y", "webauthn",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.realpostgres]
description = "run tests with a real postgres db"
dependency_groups = ["tests"]
commands = [
    [
        "uv", "pip", "install", "psycopg2-binary",
    ],
    ["pybabel", "compile", "--domain", "flask_security", "-d", "flask_security/translations"],
    [
        "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
        {replace = "posargs", default = [], extend = true},
    ],
]

[tool.tox.env.style]
description = "run all pre-commit hooks on all files"
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "run", "--all-files"]]

[tool.tox.env.update-actions]
description = "update GitHub Actions pins"
labels = ["update"]
dependency_groups = ["gha-update"]
skip_install = true
commands = [["gha-update"]]

[tool.tox.env.update-pre-commit]
description = "update pre-commit pins"
labels = ["update"]
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "autoupdate", "--freeze", "-j4"]]

[tool.tox.env.update-requirements]
description = "update uv lock"
labels = ["update"]
dependency_groups = []
no_default_groups = true
skip_install = true
commands = [["uv", "lock", {replace = "posargs", default = ["-U"], extend = true}]]

[tool.uv]
default-groups = ["dev", "pre-commit", "tests", "typing"]
