[options.extras_require]
babel=
    babel>=2.9.1
    flask_babel>=2.0.0
fsqla=
    flask_sqlalchemy>=2.5.1
    sqlalchemy>=1.3.24
    sqlalchemy-utils>=0.37.9
common=
    bcrypt>=3.1.5
    flask_mailman>=0.3.0
    bleach>=3.3.1
mfa=
    cryptography>=3.4.8
    qrcode>=7.3.1
    phonenumberslite>=8.12.18
    webauthn>=1.5.0

[aliases]
test=pytest

[bdist_wheel]
universal=1

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
warning-is-error = 1

[upload_sphinx]
upload-dir = docs/_build/html

[compile_catalog]
directory = flask_security/translations/
domain = flask_security

[extract_messages]
project= Flask-Security
version=4.0.0
msgid_bugs_address = jwag956@github.com
mapping-file = babel.ini
output-file = flask_security/translations/flask_security.pot
add-comments = NOTE
keywords = _fsdomain

[init_catalog]
domain = flask_security
input-file = flask_security/translations/flask_security.pot
output-dir = flask_security/translations/

[update_catalog]
domain = flask_security
input-file = flask_security/translations/flask_security.pot
output-dir = flask_security/translations/
no-fuzzy-matching = yes

[flake8]
max-line-length = 88
per-file-ignores =
    tests/view_scaffold.py: E402
