[options.extras_require]
babel=
    babel>=2.12.1
    flask_babel>=3.1.0
fsqla=
    flask_sqlalchemy>=3.0.2
    sqlalchemy>=1.4.35
    sqlalchemy-utils>=0.38.3
common=
    bcrypt>=4.0.1
    flask_mailman>=0.3.0
    bleach>=6.0.0
mfa=
    cryptography>=40.0.2
    qrcode>=7.4.2
    phonenumberslite>=8.13.11
    webauthn>=1.8.0

[aliases]
test=pytest

[bdist_wheel]
universal=1

[compile_catalog]
directory = flask_security/translations/
domain = flask_security

[extract_messages]
project= Flask-Security
version=5.2.0
msgid_bugs_address = jwag956@github.com
mapping-file = babel.ini
output-file = flask_security/translations/flask_security.pot
add-comments = NOTE
keywords = _fsdomain

[init_catalog]
domain = flask_security
input-file = flask_security/translations/flask_security.pot
output-dir = flask_security/translations/

[update_catalog]
domain = flask_security
input-file = flask_security/translations/flask_security.pot
output-dir = flask_security/translations/
no-fuzzy-matching = yes

[flake8]
max-line-length = 88
per-file-ignores =
    tests/view_scaffold.py: E402
